<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/nav_bottom"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cov1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Apakah itu COVID-19?"/>

            <TextView
                android:id="@+id/pcov1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/apakah_itu_covid"
                android:background="@color/colorYellow"
                app:layout_constraintTop_toTopOf="@+id/cov1"/>

            <TextView
                android:id="@+id/cor1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/pcov1"
                android:layout_marginTop="20dp"
                android:text="Apakah itu Korona Virus?"/>

            <TextView
                android:id="@+id/pcor1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/cor1"
                android:text="@string/apakah_itu_korona"
                android:background="@color/colorGreenMuda"/>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dampak1"
                app:srcCompat="@drawable/covid" />


            <TextView
                android:id="@+id/dampak1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/pcor1"
                android:layout_marginTop="20dp"
                android:text="Apakah tanda-tanda seseorang terserang virus Corona?"/>

            <TextView
                android:id="@+id/pdampak1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/dampak1"
                android:text="@string/dampak_dan_gejala"
                android:background="@color/colorYellowMuda"/>

            <TextView
                android:id="@+id/penularan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/pdampak1"
                android:layout_marginTop="20dp"
                android:text="Bagaimana cara virus Corona menyebar?"/>

            <TextView
                android:id="@+id/ppenularan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/penularan"
                android:text="@string/penularan"
                android:background="@color/colorPurpleMuda"/>

            <TextView
                android:id="@+id/pencegahan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/ppenularan"
                android:layout_marginTop="20dp"
                android:text="Bagaimana cara mencegah penularan virus Corona?"/>

            <TextView
                android:id="@+id/ppencegahan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/pencegahan"
                android:text="@string/pencegahan"
                android:background="@color/colorGreenMuda"/>

            <TextView
                android:id="@+id/satgas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/ppencegahan"
                android:layout_marginTop="20dp"
                android:text="@string/satgas"/>

            <TextView
                android:id="@+id/psatgas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/satgas"
                android:text="@string/satgasdef"
                android:background="@color/colorYellow"/>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:srcCompat="@drawable/putih" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</FrameLayout>